# maru-desktop

./: .editorconfig  .env.example  .gitignore  .npmrc  CHANGELOG.md  README.md  maru-log-1777515434859.txt  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/sidecar/: README.md  build.py  entry.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sidecar.spec
apps/sidecar/maru_sidecar/: __init__.py  __main__.py  core_bridge.py  event_bus.py  logger.py  runtime.py  server.py
apps/sidecar/maru_sidecar/backend/: __init__.py  backups.py  bootstrap.py  chat_dispatcher.py  data_catalog.py  donations.py  emotes.py  fortunes.py  games.py  games_doc.py  gift_downloader.py  health_service.py  ia.py  images.py  keyboard.py  letter_png.py  logs.py  metrics.py  migrations.py  minigames.py  overlays.py  overlays_relay.py  profiles.py  rule_boosts.py  rule_dispatcher.py  rules.py  settings.py  simulator.py  social.py  sounds.py  spotify.py  stubs.py  system.py  tiktok.py  top_lives.py  tts.py
apps/sidecar/maru_sidecar/backend/utils/: numbers_es.py  tts_text.py
apps/sidecar/maru_sidecar/rpc/: __init__.py  registry.py
apps/sidecar/tests/: conftest.py  test_backups.py  test_data_service.py  test_event_bus.py  test_logs_promote.py  test_metrics.py  test_migrations.py  test_profiles_dispatcher_wiring.py  test_profiles_service.py  test_registry.py  test_registry_expanded.py  test_rule_dispatcher.py  test_rule_engine_core.py  test_rules_service.py  test_server_handshake.py  test_spotify_safe_cache.py  test_tts_text.py  test_v83_migration.py
(+264 files in other folders)
